add IntegrationTest and fixed problems with other Tests